Begin LoginActivity Include passing IntegrationTest_Login

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BIT603_A2_JohnMcPherson</string>
+    <string name="mandatory_indicator">*</string>
 </resources>
