Tabs working and using their own Fragments

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,9 +8,7 @@
     <string name="login_error_user_name">User Name</string>
     <string name="login_error_password">Password</string>
     <string name="and">and</string>
-    <string name="inventory_menu_header">Inventory</string>
-    <string name="tab_header_inventory">Inventory</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_logout">Logout</string>
+    <string name="tab_text_inventory">Inventory</string>
 </resources>
