Add logout button

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="title_activity_main">MainActivity</string>
     <string name="tab_text_logout">Logout</string>
     <string name="tab_text_inventory">Inventory</string>
+    <string name="logout">Logout</string>
 </resources>
