--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="tab_text_inventory">Inventory</string>
     <string name="logout">Logout</string>
     <string name="welcome_message_header">Welcome</string>
+    <string name="error_incorrect_login">Sorry. We did not recognise that user/password combination. Please try again</string>
 </resources>
