--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,10 @@
     <string name="logout">Logout</string>
     <string name="welcome_message_header">Welcome</string>
     <string name="error_incorrect_login">Sorry. We did not recognise that user/password combination. Please try again</string>
+    <string name="add_inventory_title">Add Inventory Item</string>
+    <string name="inventory_name_label">Item Name</string>
+    <string name="inventory_quantity_label">Quantity</string>
+    <string name="required">Required</string>
+    <string name="cancel">Cancel</string>
+    <string name="add">Add</string>
 </resources>
