--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,5 @@
     <string name="missing_inventory_details_header">Please enter</string>
     <string name="missing_inventory_item_name">Item Name</string>
     <string name="missing_inventory_item_quantity">Quantity</string>
-    <string name="duplicate_inventory_item">Sorry. That item is already in the inventory</string>
+    <string name="duplicate_inventory_item">Sorry. That item is already in inventory</string>
 </resources>
